MTX-338
Detection Criteria - Develop SnmpGet Criterion Execution

* Replace trim().isEmpty() by isBlank()

* Refactor snmpGetCriterion null check